# py-bot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/py_bot/: config.py  depends.py  main.py
src/py_bot/services/: dog.py
src/py_bot/utils/: logget.py
